# Scribe

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  Scribe.bat  Scribe.py  main.py  package-lock.json  package.json  requirements.txt  transcribe.py  vite.config.js
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/06-ci-cd-pipeline/: 06-01-SUMMARY.md
.planning/phases/06-cicd-pipeline/: 06-01-PLAN.md  06-02-PLAN.md  06-CONTEXT.md  06-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.plans/features/: F6-SUMMARY.md
core/: __init__.py  audio.py  history.py  models.py  transcriber.py
python/: requirements.txt  whisper_service.py
resources/: README.md
resources/models/: README.md
src/: index.html  main.js  overlay.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: ICON_NEEDED.txt  generate_icons.py
src-tauri/src/: audio.rs  hotkey.rs  main.rs  model_manager.rs  overlay.rs  post_process.rs  settings.rs  sounds.rs  transcribe.rs  tray.rs  typing.rs
ui/: __init__.py  app.py  colors.py
utils/: __init__.py  config.py  logging.py
